--- a/NCLGeneralFramework/Info.plist
+++ b/NCLGeneralFramework/Info.plist
@@ -27,7 +27,7 @@
 			<string>2016081101731757</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>xwpaydemo</string>
+				<string>nclalipay</string>
 			</array>
 		</dict>
 	</array>
