--- a/NCLGeneralFramework/Info.plist
+++ b/NCLGeneralFramework/Info.plist
@@ -23,6 +23,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
 			<key>CFBundleURLName</key>
 			<string>2016081101731757</string>
 			<key>CFBundleURLSchemes</key>
@@ -30,9 +32,24 @@
 				<string>nclalipay</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>nclwxpay</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wxe6effc63c67bff3b</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>nclalipay</string>
+		<string>nclwxpay</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
